--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_bloc: ^8.1.3
+  blurry_modal_progress_hud: ^1.1.1
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.6.0
